# llvm-pascal-s

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: arithmetic.ps  array_grammatical_error.ps  array_semantic_error.ps  assign.ps  basic_and_for_semantic_error.ps  binary_semantic_error.ps  call_semantic_error.ps  comment.ps  comment_lexical_error.ps  gcd.ps  gcd_with_grammatical_error.ps  gcd_with_lexical_error.ps  hello_world.ps  if_else.ps  llvm_conv.ps  main.ps  not_shared_stack.ps  qsort.ps  read_write.ps  read_write_boolean.ps  read_write_mi_array.ps  redeclare_semantic_error.ps  sort.ps
include/: logger.h  token.h
include/dep/: opt.h  stl.h
include/pascal-s/: ast.h  errno.h  error.h  exception.h  features.h  interface.h  lexer.h  lexer_mock.h  llvm-ast.h  logger.h  mock.h  parser.h  parser_recursive.h  token.h
include/pascal-s-test/: gtest.h
include/pascal-s/lib/: convert.h  guess.h  libstdps.h  stdtype.h  stream_file.h  string.h
lib/: .gitignore  CMakeLists.txt
lib/libstdps/: io.cpp  main.cpp
script/: lex_server.py  llvm-ps++.py
src/: CMakeLists.txt
src/compiler/: CMakeLists.txt  compiler.cpp  compiler.h  compiler_option.h  compiler_v2.cpp
src/exception/: exception.cpp
src/exception/test/: CMakeLists.txt  exception_test.cpp
src/lexer/: CMakeLists.txt  Makefile  build.sh  flex-define.h  flex-lexer.cpp  flex-lexer.h  flex-lexer_error.cpp  gulp.h  lexer-in-memory.cpp  lexer.cpp  lexer.flex  lexer.h  lexer_test.cpp  token_test.cpp
src/lexer/test/: CMakeLists.txt  lexer_show_error_test.cpp  lexer_test.cpp  token_helper.h  token_test.cpp
src/parser/: CMakeLists.txt  parse_const_decls.cc  parse_const_exp.cc  parse_exp.cc  parse_expression_list.cc  parse_id_list.cc  parse_param_list.cc  parse_program.cc  parse_program_body.cc  parse_program_head.cc  parse_statement.cc  parse_statement_compound.cc  parse_statement_for.cc  parse_statement_if_else.cc  parse_subprogram.cc  parse_subprogram_body.cc  parse_subprogram_decls.cc  parse_subprogram_head.cc  parse_type.cc  parse_var_decls.cc  parse_var_list.cc  parse_variable.cc  parser.cpp  parser_test.cpp  pascal_s_parser_adaptor.cc
src/parser/test/: CMakeLists.txt  parse_const_decls_test.cpp  parse_const_exp_test.cpp  parse_exp_list_test.cpp  parse_exp_test.cpp  parse_id_list_test.cpp  parse_param_list_test.cpp  parse_statement_test.cpp  parse_subprogram_body_test.cpp  parse_subprogram_decls_test.cpp  parse_subprogram_head_test.cpp  parse_var_decls_test.cpp  parse_var_list_test.cpp  parse_variable_test.cpp  parser_test.cpp  parser_test_helper.h  program_body_test.cpp  program_head_test.cpp  type_test.cpp
src/py-module/: .gitignore  CMakeLists.txt  py_pascal_s.cpp
src/target-c/: CMakeLists.txt  target_test.cpp
src/target-llvm/: CMakeLists.txt  gen_builtin.cpp  gen_decls.cpp  gen_exp_array_index.cpp  gen_exp_assign.cpp  gen_exp_binary.cpp  gen_exp_call.cpp  gen_exp_fac.cpp  gen_exp_lvalue.cpp  gen_exp_unary.cpp  gen_program.cpp  gen_statement_block.cpp  gen_statement_exec.cpp  gen_statement_for.cpp  gen_statement_if_else.cpp  gen_statement_read_write.cpp  gen_subprogram.cpp  gen_type.cpp  gen_var_decls.cpp  inner.cpp  llvm-helper.cpp  target-llvm.cpp  target_main.cpp  target_test.cpp
src/target-llvm/test/: CMakeLists.txt  target_llvm_test.cpp
src/target-nothing/: CMakeLists.txt  nothing_main.cpp
src/test/: CMakeLists.txt  opt_test.cpp  test-main.cpp
src/token/: token.cpp
src/token-ast/: ast.cpp  llvm-ast.cpp  token.cpp  token_delete.cpp  token_map.cpp  token_predicate.cpp
src/token-ast/test/: CMakeLists.txt  ast_pos_test.cpp
src/token/test/: CMakeLists.txt  token_format_test.cpp
